# JellyPot

./: Jellyfin.lnk  JellyfinUAC.lnk  OpenMediaInfoPathScriptmonkey.js  PotPlayerMini64.reg  README.md  USAGE.md  config.json  main.py  potplayer_launcher.spec  pyproject.toml  run.py  setup.py  test.py  update_config.py  安装说明.md  更新总结.md
docs/: README_CN.md
src/jellypot/: __init__.py  __main__.py  main.py
src/jellypot/assets/: jellyfin.lnk  psh_launch_test.html
src/jellypot/config/: JellyfinUAC.xml  PotPlayerMini64.reg  configurator.py  runner.py  setup.py
src/jellypot/core/: build.py  launcher.py
src/jellypot/scripts/: Jellyfin.bat  OpenWithPotplayerUserscript.js  potplayer.ps1  start.bat
